--- a/styles.css
+++ b/styles.css
@@ -142,18 +142,18 @@ a:hover {
 
 .card-img-top {
   position: absolute;
-  z-index: 3;
+  z-index: 2;
 }
 
-.insta {
+.block1,
+.block2,
+.block3,
+.block4,
+.block5,
+.block6 {
   position: absolute;
   top: 1;
-  z-index: 2;
-  transition: 333ms linear;
-}
-
-.p1 {
-  position: absolute;
-  z-index: 4;
+  z-index: 3;
   opacity: 0;
+  transition: 333ms linear;
 }
